--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "consoletvs/charts": "^6.6",
         "guzzlehttp/guzzle": "*",
         "hidehalo/nanoid-php": "^1.1",
         "intervention/image": "^2.7",
